fix: prevent collapsible from overflowing

--- a/app-src/scripts/collapsible/_collapsible-d.scss
+++ b/app-src/scripts/collapsible/_collapsible-d.scss
@@ -27,13 +27,14 @@ collapsible {
   .collapsible-panel {
     height: auto;
     display: block;
-    overflow: hidden;
 
     // make sure we don't produce clunky animations
     padding: 0 !important;
     margin: 0 !important;
 
     &.ng-animate {
+      overflow: hidden !important;
+
       * {
         transition: none !important;
         animation-duration: 0s !important;
